--- a/Curriculo.html
+++ b/Curriculo.html
@@ -13,74 +13,24 @@
 <body>
   <div class="container">
     <!-- Aqui fica o conteúdo que será visível -->
-    <h2 style="text-align: left;">João Vitor Dolinski da Silva</h3>
-    <h3 style="text-align: left;">Estagiário</h4>
+    <h2 style="text-align: center;">João Vitor Dolinski da Silva</h2>
+    <h3 style="text-align: center;">Estagiário</h3>
       <hr>
-        <table>
-            <tr>
-              <td rowspan=“6”>
-                <img width="200" height="200" src='eu.jpg'/>
-               </td>
-               <tr>
-                <td></td>
-               </tr>
-               <td><h3 style="text-align: left;"><u>Sobre mim</u></h3></td>
-               </tr>
-               <tr>
-               <td><h4 style="text-align: left;"><b>Idade: </b>19 Anos</h4></td>
-               </tr>
-               <tr>
-                <td><h4 style="text-align: left;"><b>Estado Civil: </b>Solteiro</h4></td>
-               </tr>
-               <tr>
-                <td><h4 style="text-align: left;"><b>Cidade: </b>Pelotas RS</h4></td>
-               </tr>
-               <tr>
-                <td><h4 style="text-align: left;"><b>Endereço: </b>Rua General Osório, 1500</h4></td>
-               </tr>
-               <tr>
-                <td><h4 style="text-align: left;"><b>Email: </b>joaovitordolinski@gmail.com</h4></td> 
-               </tr>
-        </table>
-        <hr>
-        <h2 style="text-align: left;">Experiência Profissional</h2>
-        <table>
-          <tr>
-            <h3 style ="text-align: left;">WR Silva Representações</h3>
-            <h4 style="text-align: left;">Contrato com Biscoitos Zezé - 2020/2022</h4>
-            <td>Minha experiência como vendedor externo da Biscoitos Zezé
-              destaca minhas habilidades de comunicação, capacidade de
-              construir relacionamentos com clientes, abordagem proativa de
-              vendas e identificação de oportunidades adicionais de vendas.
-              Eu apresentava produtos de maneira clara e persuasiva,
-              construindo relacionamentos duradouros com os clientes.
-              Identificava oportunidades de vendas adicionais, oferecendo
-              soluções personalizadas e atendendo às necessidades
-              específicas de cada cliente. Como resultado, alcancei e
-              ultrapassei as metas de vendas estabelecidas pela empresa.
-              Também tinha habilidades em gerenciamento de território e
-              mantinha registros precisos de vendas e atividades de
-              relacionamento com o cliente</td>
-          </tr>
-        </table>
-        <hr>
-      <h2 style="text-align: left;">Educação</h2>
-      <table>
-        <tr>
-          <h3 style ="text-align: left;">Faculdade Senac RS</h3>
-          <h4 style="text-align: left;">Análise e Desenvolvimento de Sistemas - 2023/2025</h4>
-          <td>Iniciei meu primeiro semestre na faculdade Senac no dia 6 de Março de 2023,
-            cursando Análise e Desenvolvimento de Sistemas.</td>
-        </tr>
+      <img src="eu.jpg" width="300" align="right">
+      <h2><u>Dados Pessoais</u></h2>
+    
+          <h3><img src="profile.png" width="15">João Vitor Dolinski da Silva </h3>            
+          <h3><img src="email.png" width="15">joaovitordolinski@gmail.com</h3>            
+          <h3><img src="cake.png" width="15">25/10/2003</h3>           
+          <h3><img src="zap.png" width="15">(53) 99121-9645</h3>
+        
       </table>
-      <hr>
-        <h2 style="text-align: left;">Competências</h2>
-        <table>
-          <h4 style="text-align: left;">Inglês Intermediário</h4>
-          <h4 style="text-align: left;">Boa Comunicação</h4>
-          <h4 style="text-align: left;">Pacote Office</h4>
-          <h4 style="text-align: left;">Relação com o Cliente</h4>
-          <hr>
-        </table>
+      <h2><u>Endereço</u></h2>
+      <h3><img src="pin.png" width="15">Rua General Osório, Centro, Pelotas, Rio Grande do Sul, Brasil. 96020-000</h3>
+        <hr>
+        <table cellspacing="30" align="center">
+          <td><a href="subpaginas/Formação academica.html"><h2><u>Formação Academica</u></h2></a></td>
+          <td><a href="subpaginas/Competências.html"><h2><u>Competências</u></h2></a></td>
+          <td><a href="subpaginas/Experiencias.html"><h2>Experiência Profissional</h2></a></td>
 </body>
 </html>
