--- a/subpaginas/Competências.html
+++ b/subpaginas/Competências.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h3>
-        <a href="..\Curriculo.html">
+        <a href="..\index.html">
             < Voltar
         </a>
     </h3>
