--- a/subpaginas/Experiencias.html
+++ b/subpaginas/Experiencias.html
@@ -7,7 +7,7 @@
     <title style="text-align: left;">Experiência Profissional</title>
 </head>
 <body>
-    <h3><a href="../Curriculo.html">< Voltar</a></h3>
+    <h3><a href="../index.html">< Voltar</a></h3>
         <table>
           <tr>
             <hr>
