--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         
       </table>
       <h2><u>Endereço</u></h2>
-      <h3><img src="pin.png" width="15">Rua General Osório, Centro, Pelotas, Rio Grande do Sul, Brasil. 96020-000</h3>
+      <h3><img src="pin.png" width="15">Rua General Osório 1500, Centro, Pelotas, Rio Grande do Sul, Brasil. 96020-000</h3>
         <hr>
         <table cellspacing="30" align="center">
           <td><a href="subpaginas/Formação academica.html"><h2><u>Formação Academica</u></h2></a></td>
