--- a/index.html
+++ b/index.html
@@ -3,23 +3,28 @@
 <head>
     <meta charset="UTF-8" />
     <title>Currículo</title>
+    <link rel = "stylesheet" href = "subpaginas/style.css">
     <style>
       .container {
         width: 80%; 
-        margin: 0 auto; 
+        margin: auto auto; 
       }
     </style>
 </head>
 <body>
-  <div class="container">
+  <style>
+    body {
+      background-image: url('background.png');
+    }
+  </style>
+  <div class="container" id="bloco">
     <!-- Aqui fica o conteúdo que será visível -->
     <h2 style="text-align: center;">João Vitor Dolinski da Silva</h2>
     <h3 style="text-align: center;">Estagiário</h3>
-      <hr>
       <img src="eu.jpg" width="300" align="right">
       <h2><u>Dados Pessoais</u></h2>
     
-          <h3><img src="profile.png" width="15"> João Vitor Dolinski da Silva </h3>            
+          <h3><img src="profile.png" width="15" id="imagem"> João Vitor Dolinski da Silva </h3>            
           <h3><img src="email.png" width="15"> joaovitordolinski@gmail.com</h3>            
           <h3><img src="linkedin-logo-linkedin-icon-transparent-free-png.webp" width="15"><a href="https://www.linkedin.com/in/jo%C3%A3o-vitor-dolinski-da-silva-330089269/" target="_blank"> Linkedin</a></h3>  
           <h3><img src="github.png" width="15"><a href="https://github.com/Dollynski" target="_blank"> GitHub</a></h3>
@@ -29,10 +34,9 @@
       </table>
       <h2><u>Endereço</u></h2>
       <h3><img src="pin.png" width="15">Rua General Osório 1500, Centro, Pelotas, Rio Grande do Sul, Brasil. 96020-000</h3>
-        <hr>
         <table cellspacing="40" align="center">
-          <td><a href="subpaginas/Formação academica.html"><h2><u>Formação Academica</u></h2></a></td>
-          <td><a href="subpaginas/Competências.html"><h2><u>Competências</u></h2></a></td>
+          <td><a href="subpaginas/Formação academica.html"><h2>Formação Academica</h2></a></td>
+          <td><a href="subpaginas/Competências.html"><h2>Competências</h2></a></td>
           <td><a href="subpaginas/Experiencias.html"><h2>Experiência Profissional</h2></a></td>
           <td><a href="subpaginas/Contato.html"><h2>Entre em Contato Comigo</h2></a></td>
 </body>
