--- a/subpaginas/Contato.html
+++ b/subpaginas/Contato.html
@@ -7,23 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Entre em Contato Comigo</title>
-    <style>
-        .container {
-          width: 80%; 
-          margin: 0 auto; 
-        }
-
-        #alinhar {
-            width: 50%;
-        }
-
-        #botao {
-            width: 10%;
-            margin: 0 auto;
-        }
-      </style>
+    <link rel = "stylesheet" href = "style.css">
 </head>
 <body>
+    <div class="container" id="bloco">
+    <style>
+        body {
+          background-image: url('background.png');
+        }
+      </style>
     <h3><a href="../Curriculo.html"><= Voltar</a></h3>
     <h2 style="text-align: center;">Preencha o Formulário</h2>
     <hr>
@@ -60,7 +52,7 @@
                	
                 </textarea></tr></td>
             </table>  
-            <button align="right" id="botao">
+            <button id="botao">
                 Enviar
             </button> 
         </form>
