--- a/subpaginas/Experiencias.html
+++ b/subpaginas/Experiencias.html
@@ -5,12 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title style="text-align: left;">Experiência Profissional</title>
+    <link rel = "stylesheet" href = "style.css">
+    <style>
+        .container {
+          width: 80%; 
+          margin: auto auto; 
+        }
+      </style>
 </head>
 <body>
-    <h3><a href="../index.html">< Voltar</a></h3>
+  <style>
+    body {
+      background-image: url('background.png');
+    }
+  </style>
+  <div class="container" id="bloco">
+    <h3><a href="../Curriculo.html"><= Voltar</a></h3>
         <table>
           <tr>
-            <hr>
             <h3 style ="text-align: left;">WR Silva Representações</h3>
             <h4 style="text-align: left;">Contrato com Biscoitos Zezé - 2020/2022</h4>
             <td>Minha experiência como vendedor externo da Biscoitos Zezé
@@ -26,8 +38,8 @@
               Também tinha habilidades em gerenciamento de território e
               mantinha registros precisos de vendas e atividades de
               relacionamento com o cliente</td>
-              <hr>
           </tr>
-        </table>
+      </table>
+      </div>
 </body>
 </html>
