--- a/subpaginas/Contato.html
+++ b/subpaginas/Contato.html
@@ -16,7 +16,7 @@
           background-image: url('background.png');
         }
       </style>
-    <h3><a href="../Curriculo.html"><= Voltar</a></h3>
+    <h3><a href="../index.html"><= Voltar</a></h3>
     <h2 style="text-align: center;">Preencha o Formulário</h2>
     <hr>
         <div class="row">
