--- a/subpaginas/Experiencias.html
+++ b/subpaginas/Experiencias.html
@@ -20,7 +20,7 @@
     }
   </style>
   <div class="container" id="bloco">
-    <h3><a href="../Curriculo.html"><= Voltar</a></h3>
+    <h3><a href="../index.html"><= Voltar</a></h3>
         <table>
           <tr>
             <h3 style ="text-align: left;">WR Silva Representações</h3>
