--- a/subpaginas/Formação academica.html
+++ b/subpaginas/Formação academica.html
@@ -21,7 +21,7 @@
     </style>
     <div class="container" id="bloco">
 <body>
-    <h3><a href="../Curriculo.html"><= Voltar</a></h3>
+    <h3><a href="../index.html"><= Voltar</a></h3>
     <h2><u>Formação Academica</u></h2>
     <h3><img src="..\escola.png" width="15">Escola Estadual de Ensino Médio<a href="https://m.facebook.com/profile.php?id=383463258346633&__tn__=C-R" target="_blank"> Monsenhor Queiroz</a></h3>
     <h3>|2020-2022</h3>
